# transpiled_sqlite

./: .gitignore  Cargo.toml  LICENSE  lib.rs  muncher.py  refactor.py
src/: binding.rs  shell.rs
transpiled/: shell.rs
