[workspace]
members = [
]
[package]
name = "transpiled_sqlite"
authors = ["gigih aji ibrahim"]
version = "0.0.1"
publish = false
edition = "2021"
autobins = false

[lib]
name = "sqrite"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
path = "src/shell.rs"
name = "shell"

[dependencies]
c2rust-bitfields= "0.3"
f128= "0.2"
num-traits= "0.2"
libc= "0.2"
smol_str = "0.1"
ascii_utils = "0.9"
sscanf = "0.3"
shell-words = "1.1"
rustyline = "10.0.0"
rustyline-derive = "*"
memmem = "0.1"
strfmt = "0.2"
const_format = "0.2"
bstr = "*"